# game_planner

./: logfile_trajectoryshift_brokentrajectory.txt  logfile_trajectoryshift_goodtrajectory.txt  new_error_log.txt
devel/: .catkin  (+3 more)
src/ros_game_planner/common/geometry/: CMakeLists.txt  package.xml
src/ros_game_planner/common/geometry/include/geometry/: line_segment2.h  polyline2.h
src/ros_game_planner/common/geometry/include/utils/: types.h
src/ros_game_planner/common/geometry/src/geometry/: line_segment2.cpp  polyline2.cpp
src/ros_game_planner/game_planner/: .gitignore  CMakeLists.txt  README.md  package.xml
src/ros_game_planner/game_planner/include/constraint/: base_al_constraint.h
src/ros_game_planner/game_planner/include/constraint/deterministic/: al_constraint.h  obstacle_constraint.h  obstacle_linear_constraint.h  proximity_constraint.h  single_dimension_constraint.h
src/ros_game_planner/game_planner/include/constraint/stochastic/: al_chance_constraint.h  obstacle_linear_chance_constraint.h  single_dimension_chance_constraint.h
src/ros_game_planner/game_planner/include/cost/: player_cost.h
src/ros_game_planner/game_planner/include/cost/deterministic/: cost.h  obstacle_cost.h  obstacle_linear_cost.h  proximity_cost.h  quadratic_cost.h  quadratic_polyline2_cost.h  semiquadratic_polyline2_cost.h
src/ros_game_planner/game_planner/include/cost/stochastic/: chance_cost.h  chance_obstacle_linear_cost.h
src/ros_game_planner/game_planner/include/dynamics/: multi_player_dynamical_system.h  single_player_car_6d.h  single_player_dynamical_system.h  single_player_unicycle_4d.h
src/ros_game_planner/game_planner/include/solver/: augmented_lagrangian_solver.h  problem.h  solver_log.h
src/ros_game_planner/game_planner/include/solver/iterative_solver/: base_iterative_solver.h  ilq_solver.h  ilqg_solver.h
src/ros_game_planner/game_planner/include/solver/lq_solver/: lq_feedback_nash_solver.h  lq_feedback_stackelberg_solver.h  lq_solver.h
src/ros_game_planner/game_planner/include/utils/: linear_dynamics.h  loop_timer.h  math_utils.h  operating_point.h  quadratic_cost_approximation.h  strategy.h  types.h
src/ros_game_planner/game_planner/include/utils/obstacle/: circular_obstacle.h  obstacle.h  rectangular_obstacle.h
src/ros_game_planner/game_planner/logs/ilq_result/0/: xs.csv
src/ros_game_planner/game_planner/logs/ilq_result/1/: cumulative_runtimes.txt  u0.txt
src/ros_game_planner/game_planner/logs/ilq_result/2/: cumulative_runtimes.txt  u0.txt  xs.csv
src/ros_game_planner/game_planner/logs/ilq_result/3/: cumulative_runtimes.txt  u0.txt
src/ros_game_planner/game_planner/logs/ilqg_result/0/: cumulative_cost.csv
src/ros_game_planner/game_planner/logs/ilqg_result/1/: cumulative_cost.csv  cumulative_runtimes.txt  xs.csv
src/ros_game_planner/game_planner/logs/ilqg_result/2/: cumulative_cost.csv  cumulative_runtimes.txt
src/ros_game_planner/game_planner/logs/ilqg_result/3/: xs.csv
src/ros_game_planner/game_planner/src/constraint/: base_al_constraint.cpp
src/ros_game_planner/game_planner/src/constraint/deterministic/: obstacle_constraint.cpp  obstacle_linear_constraint.cpp  proximity_constraint.cpp  single_dimension_constraint.cpp
src/ros_game_planner/game_planner/src/constraint/stochastic/: obstacle_linear_chance_constraint.cpp  single_dimension_chance_constraint.cpp
src/ros_game_planner/game_planner/src/cost/: player_cost.cpp
src/ros_game_planner/game_planner/src/cost/deterministic/: obstacle_cost.cpp  obstacle_linear_cost.cpp  proximity_cost.cpp  quadratic_cost.cpp  quadratic_polyline2_cost.cpp  semiquadratic_polyline2_cost.cpp
src/ros_game_planner/game_planner/src/cost/stochastic/: chance_obstacle_linear_cost.cpp
src/ros_game_planner/game_planner/src/dynamics/: multi_player_dynamical_system.cpp  single_player_car_6d.cpp  single_player_unicycle_4d.cpp
src/ros_game_planner/game_planner/src/solver/: augmented_lagrangian_solver.cpp  problem.cpp  solver_log.cpp
src/ros_game_planner/game_planner/src/solver/iterative_solver/: base_iterative_solver.cpp  ilq_solver.cpp  ilqg_solver.cpp
src/ros_game_planner/game_planner/src/solver/lq_solver/: lq_feedback_nash_solver.cpp  lq_feedback_stackelberg_solver.cpp
src/ros_game_planner/game_planner/src/utils/: loop_timer.cpp  math_utils.cpp  operating_point.cpp
src/ros_game_planner/game_planner/test/constraint/deterministic/: obstacle_constraint_test.cpp  obstacle_linear_constraint_test.cpp  single_dimension_constraint_test.cpp
src/ros_game_planner/game_planner/test/constraint/stochastic/: single_dimension_chance_constraint_test.cpp
src/ros_game_planner/game_planner/test/cost/deterministic/: obstacle_cost_test.cpp  obstacle_linear_cost_test.cpp  player_cost_test.cpp  quadratic_cost_test.cpp
src/ros_game_planner/game_planner/test/cost/stochastic/: chance_obstacle_linear_cost_test.cpp  (+1 more)
src/ros_game_planner/game_planner/test/dynamics/: multi_player_dynamical_system_test.cpp  single_player_unicycle4d_test.cpp
src/ros_game_planner/game_planner/test/solver/: ilq_solver_test.cpp  ilqg_solver_test.cpp
src/ros_game_planner/game_planner/urdf/: robot.urdf
src/ros_game_planner/open_simulator/: CMakeLists.txt
src/ros_game_planner/open_simulator/include/core/: compare_game_planner_core.h  game_planner_core.h
src/ros_game_planner/open_simulator/include/scenario/: one_player_lane_change.h  soft_one_player_lane_change.h  two_players_overtaking.h
src/ros_game_planner/open_simulator/include/utils/: ros_utils.h
src/ros_game_planner/open_simulator/launch/: compare.launch  game_planner.launch
src/ros_game_planner/open_simulator/rviz/: compare.rviz  game_planner.rviz
src/ros_game_planner/open_simulator/src/: compare_game_planner_node.cpp  game_planner_node.cpp
src/ros_game_planner/open_simulator/src/core/: compare_game_planner_core.cpp  game_planner_core.cpp
src/ros_game_planner/open_simulator/src/utils/: ros_utils.cpp
src/ros_game_planner/simulator/: CMakeLists.txt  package.xml
src/ros_game_planner/simulator/include/lane/: lane.h
src/ros_game_planner/simulator/src/lane/: lane.cpp
(+28 files in other folders)
