<?xml version="1.0"?>
<package format="2">
  <name>geometry</name>
  <version>0.1.0</version>
  <description>The common package</description>

  <maintainer email="yutaka@todo.todo">yutaka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


</package>
